# tp2-conc

./: .gitignore  Cargo.toml  README.md  informe.md  out.txt
.github/workflows/: build.yml
src/: actor_main.rs  lib.rs  main.rs
src/actors/: merriamwebster.rs  messages.rs  mod.rs  requester.rs  synonyms.rs  thesaurus.rs  yourdictionary.rs
src/counter/: mod.rs
src/logger/: mod.rs
src/merger/: merger.rs  mod.rs
src/requester/: mod.rs
src/synonym/: balancer.rs  finder_executor.rs  merriamwebster.rs  mod.rs  searcher.rs  thesaurus.rs  yourdictionary.rs
tests/: tests.rs
