[package]
name = "sinonimos"
version = "0.1.0"
authors = ["Alejandro Daneri","Romina Casal","Matias Lafroce"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"]}
actix = "0.12"
log = "0.4.14"
log4rs = "1.0.0"
